Fixed products section on mobile

--- a/src/components/pages/home/home.css
+++ b/src/components/pages/home/home.css
@@ -280,7 +280,7 @@
 
     .product-card-image {
         min-height: 230px;
-        min-width: 155px;
+        min-width: 180px;
     }
 
     .product-card-img {
